--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@webpack-cli/generators": "^3.0.1",
+    "autoprefixer": "^10.4.13",
     "css-loader": "^6.7.3",
+    "eslint": "^8.33.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "postcss-loader": "^7.0.2",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
@@ -24,5 +32,20 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "serve": "webpack serve"
-  }
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3"
+  },
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LizaLarchenko/TS_SCSS_Starter.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LizaLarchenko/TS_SCSS_Starter/issues"
+  },
+  "homepage": "https://github.com/LizaLarchenko/TS_SCSS_Starter#readme"
 }
